@@ -48,6 +48,7 @@
 * DecidirPlus: Add `establishment_name`, `aggregate_data`, `sub_payments`, `card_holder_identification_type`, `card_holder_identification_number`, `card_door_number`, and `card_holder_birthday` fields [ajawadmirza] #4361
 * DecidirPlus: Update `error_code_from` to get error reason id [ajawadmirza] #4364
 * Dlocal: Add three_ds mpi support [cristian] #4345
+* Stripe PI: Add `request_three_d_secure` field for `create_setup_intent` [aenand] #4365
 
 == Version 1.125.0 (January 20, 2022)
 * Wompi: support gateway [therufs] #4173
